[tool.poetry]
name = "docs-cpi-pandemia"
version = "0.0.1"
description = "Ferramenta para baixar todos os documentos públicos da CPI da Pandemia"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.7.0"
backoff = "^1.11.1"
httpx = "^0.18.2"
pyquery = "^1.4.3"
tqdm = "^4.61.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
ipdb = "^0.13.9"
ipython = "^7.25.0"
mypy = "^0.910"
types-aiofiles = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
